# kropla

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  board.cc  board.h  clang-format.cmake  connections_tab03_simple.cc  cppcheck.cmake  game.cc  influence.cc  patterns.bin.tar.bz2  patterns.h  regr-res.txt  regression-list.txt  regression.py
debug/: board.h  connections_tab02.cc  game.cc  sgf.cc  sgf.h  test.cc
src/: Makefile  allpattgen.cc  allpattgen.h  board.cc  board.h  check_accuracy.cc  cnn_hash_table.cc  cnn_hash_table.h  cnn_workers.cc  cnn_workers.h  command.cc  command.h  connections_tab02.cc  connections_tab03_simple.cc  dfs.cc  dfs.h  enclosure.cc  enclosure.h  extract.cc  extracttensors.cc  extractutils.h  game.cc  game.h  game_utils.h  generatedata.cc  get_cnn_prob.cc  get_cnn_prob.h  get_cnn_prob_dummy.cc  group_neighbours.cc  group_neighbours.h  gzip.cpp  gzip.hpp  history.cc  history.h  influence.cc  influence.h  kropla_main.cc  lz77.h  mcnn.h  montecarlo.cc  (+15 more)
src/caffe/: CMakeLists.txt  mcaffe.cc  mcaffe.h
src/torch/: CMakeLists.txt  mtorch.cc  mtorch.h
testowe-sgf/: 1295.sgf  1cEYglg5R.sgf  28RIwtT.sgf  28RIwtT.sgf~  2YSc8Jx0D.sgf  2rUqNVnOz.sgf  39VaGZNaT.sgf  3UmbWEodn.sgf  46uZmR3bT.sgf  4tv4M49Q6.sgf  6492.sgf  6492_mod.sgf  6492_mod2.sgf  6492_mod3.sgf  6492_mod4.sgf  AR4Ls0T5.sgf  AfUnsHwg.sgf  FeAZ3A9h.sgf  bardzo-duzo-grozb.sgf  connections.sgf  grozby1.sgf  mc139-shotcuts-bug2.sgf  mc_09.sgf  proste-grozby.sgf  spt53fik.sgf  tCz6PaUI.sgf  trivial.sgf  u0O9GbZR.sgf  zagram153375.sgf  zagram158271.sgf  zagram159331.sgf  zagram161748.sgf  zagram163926.sgf  zagram169870.sgf  zagram175599.sgf  zagram175835.sgf  zagram181240.sgf  zagram184259.sgf  zagram185164.sgf  zagram185253.sgf  (+26 more)
tmp/: board.cc  game.cc  sgf.cc  sgf.h
unittest/: board-test.cc  dfs-test.cc  extractutils-test.cc  game-test.cc  history-test.cc  patt-test.cc  safety-test.cc  sgf-test.cc  string-utils-test.cc  utils-test.cc  utils.cc  utils.h
